--- a/Test Project/8.3 Media Query/index.html
+++ b/Test Project/8.3 Media Query/index.html
@@ -17,6 +17,33 @@ TODO: Change the background color for each device
     body {
       background-color: aquamarine;
     }
+    @media (min-width: 319px) and (max-width: 480px) {
+      /* Styles for Mobil device screens between 319px - 489px*/
+      body {
+        background-color: lightsalmon;
+      }
+    }
+
+    @media (min-width:481px) and (max-width: 1200px){
+      /*Styles for Tablet screen between 481px and 1200px*/
+      body {
+        background-color: powderblue;
+      }
+    }
+
+    @media (min-width: 1201px) and (max-width: 1600px) {
+      /*Styles for laptop screen between 1201px - 1600px*/
+      body {
+        background-color: limegreen;
+      } 
+    }
+
+    @media (min-width:1601px){
+      body {
+        background-color: seagreen ;
+      }
+    }
+
   </style>
 </head>
 
